[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scinumtools"
version = "2.5.0"
authors = [
  { name="Ondrej Pego Jaura", email="vrtulka23@pm.me" },
]
description = "Set of most frequently used tools for a rapid numerical code development in Python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vrtulka23/scinumtools"
"Bug Tracker" = "https://github.com/vrtulka23/scinumtools/issues"
